--- a/experiments-loop-functions/loop-functions/moca/controladorTamIntetos.html
+++ b/experiments-loop-functions/loop-functions/moca/controladorTamIntetos.html
@@ -4,3 +4,7 @@ fsm-config=" --nstates 4 --s0 8 --vel0 1.0 --cle0 0 --clr0 2 --n0 4
 --c0x2 2 --p0x2 0.99 --n0x3 2 --c0x3 0 --p0x3 0.35 --s1 9 --vel1 1.0 --cle1 0 --clr1 1 --n1 3 --n1x0 0 
 --c1x0 0 --p1x0 0.85 --n1x1 0 --c1x1 1 --p1x1 0.51 --n1x2 2 --c1x2 0 --p1x2 0.3 --s2 1 --cle2 4 --s3 9 --vel3 1.0 --cle3 0 --clr3 5 --n3 2 
 --n3x0 0 --c3x0 0 --p3x0 0.85 --n3x1 1 --c3x1 0 --p3x1 0.5 "/>
+
+
+<params readable="true" history='false' fsm-config=" --nstates 4 --s0 8 --vel0 1.0 --cle0 0 --clr0 2 --n0 4 --n0x0 0 --c0x0 1 --p0x0 0.15 --n0x1 0 --c0x1 0 --p0x1 0.34 --n0x2 1 --c0x2 2 --p0x2 0.99 --n0x3 2 --c0x3 5 --p0x3 0.3 --l0x3 5 --s1 9 --vel1 1.0 --cle1 0 --clr1 1 --n1 2 --n1x0 0 --c1x0 0 --p1x0 0.65 --n1x1 0 --c1x1 1 --p1x1 0.51 --s2 1 --cle2 5 --s3 9 --vel3 1.0 --cle3 0 --clr3 5 --n3 1 --n3x0 0 --c3x0 0 --p3x0 0.85  "/>
+<params readable="true" history='false' fsm-config=" --nstates 3 --s0 8 --vel0 1.0 --cle0 0 --clr0 2 --n0 3 --n0x0 0 --c0x0 1 --p0x0 0.15 --n0x1 0 --c0x1 0 --p0x1 0.34 --n0x2 1 --c0x2 2 --p0x2 0.99 --s1 9 --vel1 1.0 --cle1 0 --clr1 1 --n1 2 --n1x0 0 --c1x0 0 --p1x0 0.65 --n1x1 0 --c1x1 1 --p1x1 0.51 --s2 1 --cle2 5"/>
